--- a/index.html
+++ b/index.html
@@ -74,13 +74,9 @@
             consequat, dignissim vitae proin ipsum sed. Pellentesque nec turpis
             purus eget pellentesque integer ipsum elementum felis.
           </p>
-          <div class="button">
-            <button class="button__btn">
-              <a href="">LEARN MORE ABOUT US</a>
-            </button>
-            <button class="button__btn button__btn--orange">
-              <a href="">SUBMIT REQUEST</a>
-            </button>
+          <div class="section__buttonWrap">
+            <button class="button">LEARN MORE ABOUT US</button>
+            <button class="button button--orange">SUBMIT REQUEST</button>
           </div>
         </div>
 
@@ -225,12 +221,12 @@
                   required=""
                 />
               </div>
-            </div>
-
-            <div class="button">
-              <button class="button__btn button__btn--orange">
-                <a href="">SEND</a>
-              </button>
+              <div class="services__cart">
+                <p>&nbsp;</p>
+                <button class="button button--orange button--small">
+                  SEND
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -287,11 +283,7 @@
         <!--Global Scroll Work-->
         <div class="scroll">
           <h3 class="scroll__tx">Learn more about our services</h3>
-          <div class="button">
-            <button class="button__btn button__btn--orange">
-              <a href="">VIEW SERVICES</a>
-            </button>
-          </div>
+          <button class="button button--orange">VIEW SERVICES</button>
         </div>
       </div>
     </div>
@@ -334,10 +326,8 @@
             <img src="image/work/cube.svg" alt="finger" />
             <a href="#">Cubes Building</a>
             <p>Business Centers</p>
-            <div class="button">
-              <button class="button__btn">
-                <a href="">VIEW PROJECT</a>
-              </button>
+            <div class="buttonWrap">
+              <button class="button">VIEW PROJECT</button>
             </div>
           </div>
 
@@ -350,11 +340,7 @@
 
         <div class="scroll">
           <h3 class="scroll__tx">Explore all our works</h3>
-          <div class="button">
-            <button class="button__btn">
-              <a href="">VIEW PORTFOLIO</a>
-            </button>
-          </div>
+          <button class="button button--orange">VIEW PORTFOLIO</button>
         </div>
       </div>
     </div>
@@ -489,15 +475,15 @@
           </div>
 
           <div class="construction__conteiner">
-            <div class="constructionCard">
+            <div class="constructionCard constructionCard--big">
               <div class="constructionCard__image">
                 <img src="/image/construction/image1.jpg" alt="work" />
               </div>
-  
+
               <div class="constructionCard__content">
-                <h4 class="constructionCard__title">
+                <a href="#" class="constructionCard__title">
                   How to Build Climate Change-Resilent Infrastructure
-                </h4>
+                </a>
 
                 <ul class="constructionList">
                   <li>
@@ -507,18 +493,73 @@
                     <a href="">June 24, 2020</a>
                   </li>
                   <li>
-                    <img src="image/construction/message.svg" alt="">
+                    <img src="image/construction/message.svg" alt="" />
                     <a href="">4 comments</a>
                   </li>
                 </ul>
 
                 <p class="constructionCard__desc">
-                  Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis enim, nibh convallis...
+                  Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas
+                  faucibus. Tincidunt aliquet sit vel, venenatis nulla. Integer
+                  bibendum turpis convallis enim, nibh convallis...
                 </p>
               </div>
-  
-              <div class="constructionCard__info"></div>
             </div>
+
+            <div class="constructionCard">
+              <div class="constructionCard__image">
+                <img src="/image/construction/image2.jpg" alt="work" />
+              </div>
+
+              <div class="constructionCard__content">
+                <a href="#" class="constructionCard__title">
+                  How Construction Can Help Itself
+                </a>
+
+                <ul class="constructionList">
+                  <li>
+                    <a href="">Innovation</a>
+                  </li>
+                  <li>
+                    <a href="">June 12, 2020</a>
+                  </li>
+                  <li>
+                    <img src="image/construction/message.svg" alt="" />
+                    <a href="">No comments</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="constructionCard">
+              <div class="constructionCard__image">
+                <img src="/image/construction/image3.jpg" alt="work" />
+              </div>
+
+              <div class="constructionCard__content">
+                <a href="#" class="constructionCard__title">
+                  Types of Flooring Materials
+                </a>
+
+                <ul class="constructionList">
+                  <li>
+                    <a href="">Company News</a>
+                  </li>
+                  <li>
+                    <a href="">December 1, 2019</a>
+                  </li>
+                  <li>
+                    <img src="image/construction/message.svg" alt="" />
+                    <a href="">No comments</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="scroll">
+            <h3 class="scroll__tx">Explore all our works</h3>
+            <button class="button button--orange">VIEW PORTFOLIO</button>
           </div>
         </div>
       </div>
