--- a/index.html
+++ b/index.html
@@ -558,8 +558,8 @@
           </div>
 
           <div class="scroll">
-            <h3 class="scroll__tx">Explore all our works</h3>
-            <button class="button button--orange">VIEW PORTFOLIO</button>
+            <h3 class="scroll__tx">Explore all our news posts</h3>
+            <button class="button button--orange">VIEW ALL NEWS</button>
           </div>
         </div>
       </div>
