--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
     <div class="overview">
       <div class="wrapper">
         <div class="overview__construction">
-          <h3 class="overview__title">We are Createx Construction Bureau</h3>
+          <h3 class="overview__title typography typography--title">
+            We are Createx Construction Bureau
+          </h3>
           <p class="overview__text">
             We are rightfully considered to be the best construction company in
             the USA.
@@ -139,7 +141,9 @@
         <!--Global Block Discription-->
         <div class="overview__content">
           <div class="overview__construction">
-            <h3 class="overview__title">Our core values</h3>
+            <h3 class="overview__title typography typography--title">
+              Our core values
+            </h3>
             <p class="overview__text">
               Our mission is to set the highest standards for construction
               sphere.
@@ -234,7 +238,9 @@
         <!--Global Block Discription-->
         <div class="overview__content">
           <div class="overview__construction">
-            <h3 class="overview__title">Our services</h3>
+            <h3 class="overview__title typography typography--title">
+              Our services
+            </h3>
             <p class="overview__text">
               Createx Construction Bureau is a construction giant with a full
               range of construction services.
@@ -269,7 +275,6 @@
             />
             <a href="">Interior Design</a>
           </div>
-
           <div class="services__block">
             <img
               src="image/services/Vector4.svg"
@@ -282,7 +287,7 @@
 
         <!--Global Scroll Work-->
         <div class="scroll">
-          <h3 class="scroll__tx">Learn more about our services</h3>
+          <h3 class="typography">Learn more about our services</h3>
           <button class="button button--orange">VIEW SERVICES</button>
         </div>
       </div>
@@ -293,7 +298,9 @@
       <div class="wrapper">
         <div class="work__top">
           <div class="work__title">
-            <h3>Browse our selected projects and learn more about our work</h3>
+            <h3 class="typography typography--title">
+              Browse our selected projects and learn more about our work
+            </h3>
           </div>
 
           <div class="arrow arrow--opacity">
@@ -339,7 +346,7 @@
         </div>
 
         <div class="scroll">
-          <h3 class="scroll__tx">Explore all our works</h3>
+          <h3 class="typography">Explore all our works</h3>
           <button class="button button--orange">VIEW PORTFOLIO</button>
         </div>
       </div>
@@ -349,7 +356,9 @@
       <div class="wrapper">
         <div class="top">
           <div class="top__title">
-            <h3>Supported by 12+ partners</h3>
+            <h3 class="typography typography--title">
+              Supported by 12+ partners
+            </h3>
           </div>
 
           <div class="top__conteiner">
@@ -383,7 +392,9 @@
           <div class="port">
             <div class="port__top">
               <div class="port__title">
-                <h3>What our clients are saying</h3>
+                <h3 class="typography typography--title">
+                  What our clients are saying
+                </h3>
               </div>
 
               <div class="port__profile">
@@ -430,7 +441,9 @@
         <div class="wrapper">
           <div class="top">
             <div class="top__title">
-              <h3>Some facts and figures</h3>
+              <h3 class="typography typography--title">
+                Some facts and figures
+              </h3>
             </div>
           </div>
 
@@ -470,7 +483,7 @@
         <div class="wrapper">
           <div class="top">
             <div class="top__title">
-              <h3>Recent news</h3>
+              <h3 class="typography typography--title">Recent news</h3>
             </div>
           </div>
 
@@ -481,7 +494,10 @@
               </div>
 
               <div class="constructionCard__content">
-                <a href="#" class="constructionCard__title">
+                <a
+                  href="#"
+                  class="constructionCard__title typography typography--leadBold"
+                >
                   How to Build Climate Change-Resilent Infrastructure
                 </a>
 
@@ -512,7 +528,10 @@
               </div>
 
               <div class="constructionCard__content">
-                <a href="#" class="constructionCard__title">
+                <a
+                  href="#"
+                  class="constructionCard__title typography typography--leadBold"
+                >
                   How Construction Can Help Itself
                 </a>
 
@@ -537,7 +556,10 @@
               </div>
 
               <div class="constructionCard__content">
-                <a href="#" class="constructionCard__title">
+                <a
+                  href="#"
+                  class="constructionCard__title typography typography--leadBold"
+                >
                   Types of Flooring Materials
                 </a>
 
@@ -558,10 +580,16 @@
           </div>
 
           <div class="scroll">
-            <h3 class="scroll__tx">Explore all our news posts</h3>
+            <h3 class="typography">Explore all our news posts</h3>
             <button class="button button--orange">VIEW ALL NEWS</button>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="bottomApe">
+      <div class="wrapper">
+        <div class="formSend"></div>
       </div>
     </div>
 
