--- a/index.html
+++ b/index.html
@@ -589,7 +589,11 @@
 
     <div class="bottomApe">
       <div class="wrapper">
-        <div class="formSend"></div>
+        <div class="formSend">
+          <div class="formSend__title">A quick way to discuss details</div>
+
+          <form class="formSend__form"></form>
+        </div>
       </div>
     </div>
 
