--- a/index.html
+++ b/index.html
@@ -196,36 +196,36 @@
             <p>Want to know more? Ask us a question:</p>
           </div>
 
-          <div class="services__form">
-            <div class="services__example">
-              <div class="services__cart">
+          <div class="formSend__form">
+            <div class="formSend__example">
+              <div class="formSend__cart">
                 <p>Name</p>
                 <input
                   type="text"
                   placeholder="Your name"
-                  class="services__input"
+                  class="formSend__input"
                   required=""
                 />
               </div>
-              <div class="services__cart">
+              <div class="formSend__cart">
                 <p>Phone</p>
                 <input
                   type="text"
                   placeholder="Your phone"
-                  class="services__input"
+                  class="formSend__input"
                   required=""
                 />
               </div>
-              <div class="services__cart">
+              <div class="formSend__cart">
                 <p>Message</p>
                 <input
                   type="text"
                   placeholder="Your message"
-                  class="services__input services__input--message"
+                  class="formSend__input formSend__input--message"
                   required=""
                 />
               </div>
-              <div class="services__cart">
+              <div class="formSend__cart">
                 <p>&nbsp;</p>
                 <button class="button button--orange button--small">
                   SEND
@@ -587,12 +587,66 @@
       </div>
     </div>
 
+    <!--Global Bottom-->
     <div class="bottomApe">
       <div class="wrapper">
         <div class="formSend">
           <div class="formSend__title">A quick way to discuss details</div>
 
-          <form class="formSend__form"></form>
+          <div class="formSend__form formSend__form--footer">
+            <div class="formSend__example formSend__example--footer">
+              <div class="formSend__cart">
+                <p>Name*</p>
+                <input
+                  type="text"
+                  placeholder="Your name"
+                  class="formSend__input formSend__input--footer"
+                  required=""
+                />
+              </div>
+              <div class="formSend__cart">
+                <p>Phone*</p>
+                <input
+                  type="text"
+                  placeholder="Your phone number"
+                  class="formSend__input formSend__input--footer"
+                  required=""
+                />
+              </div>
+
+              <div class="formSend__cart">
+                <p>Email</p>
+                <input
+                  type="text"
+                  placeholder="Your working email"
+                  class="formSend__input formSend__input--footer"
+                  required=""
+                />
+              </div>
+              <div class="formSend__cart">
+                <p>Message*</p>
+                <input
+                  type="text"
+                  placeholder="Your message"
+                  class="formSend__input formSend__input--messageBott"
+                  required=""
+                />
+              </div>
+            </div>
+          </div>
+          <div class="bottomApe__block">
+            <div class="bottomApe__click"></div>
+            <div class="bottomApe__txt">
+              <p>I agree to receive communications from Createx</p>
+              <p>Construction Bureau.</p>
+            </div>
+          </div>
+
+          <div class="formSend__cart formSend__cart--button">
+            <button class="button button--orange button--small">
+              SEND REQUEST
+            </button>
+          </div>
         </div>
       </div>
     </div>
