--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
     <div class="bottomApe">
       <div class="wrapper">
         <div class="formSend">
-          <div class="formSend__title">A quick way to discuss details</div>
+          <div class="typography">A quick way to discuss details</div>
 
           <div class="formSend__form formSend__form--footer">
             <div class="formSend__example formSend__example--footer">
@@ -637,8 +637,8 @@
           <div class="bottomApe__block">
             <div class="bottomApe__click"></div>
             <div class="bottomApe__txt">
-              <p>I agree to receive communications from Createx</p>
-              <p>Construction Bureau.</p>
+              I agree to receive communications from Createx <br />Construction
+              Bureau.
             </div>
           </div>
 
@@ -650,6 +650,10 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer">
+      <div class="wrapper"></div>
+    </footer>
 
     <script src="js/main.js"></script>
   </body>
