--- a/index.html
+++ b/index.html
@@ -635,12 +635,12 @@
             </div>
           </div>
           <div class="bottomApe__block">
-            <div class="bottomApe__click"></div>
-            <div class="bottomApe__txt">
-              I agree to receive communications from Createx <br />Construction
-              Bureau.
-            </div>
-          </div>
+            <label class="chekbox">
+              <input type="chekbox">
+              <span class="chekbox__icon"></span>
+              <span class="chekbox__text">I agree to receive communications from Createx <br>Construction Bureau.</span>
+            </label>
+           
 
           <div class="formSend__cart formSend__cart--button">
             <button class="button button--orange button--small">
