--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
           </div>
           <div class="bottomApe__block">
             <label class="chekbox">
-              <input type="chekbox">
+              <input type="checkbox">
               <span class="chekbox__icon"></span>
               <span class="chekbox__text">I agree to receive communications from Createx <br>Construction Bureau.</span>
             </label>
