--- a/index.html
+++ b/index.html
@@ -596,49 +596,54 @@
           <div class="formSend__form formSend__form--footer">
             <div class="formSend__example formSend__example--footer">
               <div class="formSend__cart">
-                <p>Name*</p>
-                <input
-                  type="text"
-                  placeholder="Your name"
-                  class="formSend__input formSend__input--footer"
-                  required=""
-                />
+                <label class="field">
+                  <span class="field__label typography typography--smallRegular">
+                    Name*
+                  </span>
+                  <span class="field__content">
+                    <input type="text" placeholder="Your name" class="field__input typography typography--smallRegular">
+                  </span>
+                </label>
               </div>
               <div class="formSend__cart">
-                <p>Phone*</p>
-                <input
-                  type="text"
-                  placeholder="Your phone number"
-                  class="formSend__input formSend__input--footer"
-                  required=""
-                />
+                <label class="field">
+                  <span class="field__label typography typography--smallRegular">
+                    Phone*
+                  </span>
+                  <span class="field__content">
+                    <input type="text" placeholder="Your name" class="field__input typography typography--smallRegular">
+                  </span>
+                </label>
               </div>
 
               <div class="formSend__cart">
-                <p>Email</p>
-                <input
-                  type="text"
-                  placeholder="Your working email"
-                  class="formSend__input formSend__input--footer"
-                  required=""
-                />
+                <label class="field">
+                  <span class="field__label typography typography--smallRegular">
+                    Email*
+                  </span>
+                  <span class="field__content">
+                    <input type="text" placeholder="Your name" class="field__input typography typography--smallRegular">
+                  </span>
+                </label>
               </div>
               <div class="formSend__cart">
-                <p>Message*</p>
-                <input
-                  type="text"
-                  placeholder="Your message"
-                  class="formSend__input formSend__input--messageBott"
-                  required=""
-                />
+                <label class="field">
+                  <span class="field__label typography typography--smallRegular">
+                    Message*
+                  </span>
+                  <span class="field__content">
+                    <textarea placeholder="Your message" class="field__textarea typography typography--smallRegular"></textarea>
+                  </span>
+                </label>
               </div>
             </div>
           </div>
           <div class="bottomApe__block">
-            <label class="chekbox">
-              <input type="chekbox">
-              <span class="chekbox__icon"></span>
-              <span class="chekbox__text">I agree to receive communications from Createx <br>Construction Bureau.</span>
+            <label class="checkbox">
+              <input type="checkbox">
+              <span class="checkbox__icon">
+              </span>
+              <span class="checkbox__text">I agree to receive communications from Createx <br>Construction Bureau.</span>
             </label>
            
 
