--- a/ui-kit.html
+++ b/ui-kit.html
@@ -89,10 +89,40 @@
         <div class="typography typography--smallRegular">
           typography--smallRegular
         </div>
+
+        <div class="typography typography--smallRegulargrey">
+          typography--smallRegular
+        </div>
         <div class="typography typography--baseRegular">
           typography--baseRegular
         </div>
       </div>
+
+      <div class="ui__block" style="background-color: black;">
+        <div class="socials">
+              <div class="socials__img">
+                <a href="#"><img src="./image/footer/whatsApp.svg" alt="" /></a>
+              </div>
+              <div class="socials__img">
+                <a href="#"
+                  ><img src="./image/footer/messanger.svg" alt=""
+                /></a>
+              </div>
+              <div class="socials__img">
+                <a href="#"><img src="./image/footer/facebook.svg" alt="" /></a>
+              </div>
+              <div class="socials__img">
+                <a href="#"><img src="./image/footer/twitter.svg" alt="" /></a>
+              </div>
+
+              <div class="socials__img">
+                <a href="#"><img src="./image/footer/subtract.svg" alt="" /></a>
+              </div>
+            </div>
+          </div>
+      </div>
     </div>
+
+
   </body>
 </html>
